--- a/src/main/resources/templates/paperManagement.html
+++ b/src/main/resources/templates/paperManagement.html
@@ -115,6 +115,9 @@
         </div>
     </div>
     <!-- center end -->
+    <div id="msgTipBox">
+
+    </div>
     <script src="js/paperManagement.js"></script>
 </body>
 
