--- a/src/main/resources/templates/paperManagement.html
+++ b/src/main/resources/templates/paperManagement.html
@@ -15,16 +15,16 @@
 <body class="easyui-layout">
     <div data-options="region:'north',border:false" id="top">
         <h2><a href="teacherIndex.html">教师管理系统</a><span>华南理工大学</span></h2>
-        <p><strong th:text="${teacher.name}" th:id="${teacher.id}">董守玲</strong>&nbsp;教师，您好！</p>
+        <p id="teacher_info"><strong id="{TEACHERID}">{TEACHERNAME}</strong>&nbsp;教师，您好！</p>
     </div>
-     <div data-options="region:'west',split:true,title:'信息管理'" id="west">
-                    <ul class="main_menu">
-                        <li><a href="classManagement.html">班级信息</a> </li>
-                        <li><a href="paperManagement.html"  class="active">试题管理</a> </li>
-                        <li> <a href="paperMark.html">考卷评阅</a></li>
-                        <li><a href="detailGrade.html" >详细成绩</a></li>
-                    </ul>
-        </div>
+    <div data-options="region:'west',split:true,title:'信息管理'" id="west">
+        <ul class="main_menu">
+            <li><a href="classManagement.html">班级信息</a> </li>
+            <li><a href="paperManagement.html" class="active">试题管理</a> </li>
+            <li> <a href="paperMark.html">考卷评阅</a></li>
+            <li><a href="detailGrade.html">详细成绩</a></li>
+        </ul>
+    </div>
     <div data-options="region:'east',split:true" title="日历" id="east">
         <div id="calender" class="easyui-calendar"></div>
     </div>
@@ -88,7 +88,7 @@
                     <tr>
                         <td>分值</td>
                         <td>
-                            <input type="text"  name="question_score">
+                            <input type="text" name="question_score">
                         </td>
                     </tr>
                 </tbody>
@@ -116,7 +116,6 @@
     </div>
     <!-- center end -->
     <div id="msgTipBox">
-
     </div>
     <script src="js/paperManagement.js"></script>
 </body>
