--- a/src/main/resources/static/css/teacher.css
+++ b/src/main/resources/static/css/teacher.css
@@ -1,39 +1,120 @@
-html{font-size:16px;letter-spacing:1px;}
-body{font-size:0.8em;font-family:verdana,helvetica,arial,sans-serif;   color: rgb(49, 49, 49);}
-.wrapper{width:100%;height:100%;}
-#top{height:60px;background:#B3DFDA;padding:10px;overflow:hidden}
-#west{width:150px;padding:10px;}
-#east{width:400px;padding:10px;}
-#bottom{height:50px;background:#A9FACD;padding:10px;}
-#top p{float:right;margin-top:-30px;margin-right:40px;}
-.center-left{float:left;min-width:100px;width:20%;height:100%;border:1px solid rgb(149,184,231);}
-.center-right{float:left;width:78%;height:100%;}
-a,a:link,a:focus,a:visited{text-decoration:none;}
-ul.main_menu{list-style:none;background:rgb(207, 236, 235);margin:-10px;padding:0;padding-top:20px;text-align:center;height:100%;    /* width: 100%; */}
-li>a{display:inline-block;width:100%;font-size: 14px;color:rgb(39, 38, 38);transition: all 229ms ease-in;}
-li>a:hover{font-weight:700;color: rgb(67, 174, 168);}
-li{height:28px;line-height:28px;}
-a.active{background: rgb(144,191,225);font-weight:700; }
+html {
+    font-size: 16px;
+    letter-spacing: 1px;
+}
 
+body {
+    font-size: 0.8em;
+    font-family: verdana, helvetica, arial, sans-serif;
+    color: rgb(49, 49, 49);
+}
 
+.wrapper {
+    width: 100%;
+    height: 100%;
+}
 
+#top {
+    height: 60px;
+    background: #B3DFDA;
+    padding: 10px;
+    overflow: hidden
+}
 
-#msgTipBox{
+#west {
+    width: 150px;
+    padding: 10px;
+}
+
+#east {
+    width: 400px;
+    padding: 10px;
+}
+
+#bottom {
+    height: 50px;
+    background: #A9FACD;
+    padding: 10px;
+}
+
+#top p {
+    float: right;
+    margin-top: -30px;
+    margin-right: 40px;
+}
+
+.center-left {
+    float: left;
+    min-width: 100px;
+    width: 20%;
+    height: 100%;
+    border: 1px solid rgb(149, 184, 231);
+}
+
+.center-right {
+    float: left;
+    width: 78%;
+    height: 100%;
+}
+
+a, a:link, a:focus, a:visited {
+    text-decoration: none;
+}
+
+ul.main_menu {
+    list-style: none;
+    background: rgb(207, 236, 235);
+    margin: -10px;
+    padding: 0;
+    padding-top: 20px;
+    text-align: center;
+    height: 100%;
+    /* width: 100%; */
+}
+
+li>a {
+    display: inline-block;
+    width: 100%;
+    font-size: 14px;
+    color: rgb(39, 38, 38);
+    transition: all 229ms ease-in;
+}
+
+li>a:hover {
+    font-weight: 700;
+    color: rgb(67, 174, 168);
+}
+
+li {
+    height: 28px;
+    line-height: 28px;
+}
+
+a.active {
+    background: rgb(144, 191, 225);
+    font-weight: 700;
+}
+
+#msgTipBox {
     display: none;
     position: fixed;
-    top: 50%; left: 50%;
-    z-index: 1;
+    top: 50%;
+    left: 50%;
+    z-index: 9999;
     width: 220px;
-    height:120px;
+    height: 120px;
     padding: 2em;
     margin: -110px;
-    margin-top:-60px;
+    margin-top: -60px;
+    background: #FFF;
     border: 1px solid silver;
-    border-radius: .5em;  font-size: 18px;
-    box-shadow: 0 .2em .5em rgba(0,0,0,.5),
-                0 0 0 100vmax rgba(0,0,0,.2);  text-align: center;
+    border-radius: .5em;
+    font-size: 18px;
+    box-shadow: 0 .2em .5em rgba(0, 0, 0, .5), 0 0 0 100vmax rgba(0, 0, 0, .2);
+    text-align: center;
 }
-#msgTipBox .close{
+
+#msgTipBox .close {
     position: absolute;
     right: -7.5px;
     top: -7.5px;
@@ -46,10 +127,9 @@ a.active{background: rgb(144,191,225);font-weight:700; }
     padding: 2px;
     border-radius: 50%;
     border: 2px solid rgb(0, 0, 0);
-font-size: 13px;
-
+    font-size: 13px;
 }
-#msgTipBox .close:hover {
-    background: rgba(128, 128, 128,.3);
 
+#msgTipBox .close:hover {
+    background: rgba(128, 128, 128, .3);
 }
