--- a/src/main/resources/templates/exam.html
+++ b/src/main/resources/templates/exam.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -24,8 +24,8 @@
     <div class="wrapper">
         <div class="sideBar">
             <div id="student_info">
-                <p><b class="student_id" th:id="${student_id}" th:text="${student_name}">廖晓娟</b>&nbsp;同学，您好!</p>
-                <p>欢迎参加<b class="paper_id" th:id="${paper_id}" th:text="${paper_name}">数据库系统概论</b>考试</p>
+                <p><b class="student_id" id="{STUDENTID}">{STUDENTNAME}</b>&nbsp;同学，您好!</p>
+                <p>欢迎参加<b class="paper_id" id="{PAPERID}">{PAPERNAME}</b>考试</p>
             </div>
         </div>
         <div class="main">
