--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
+<p>hahaha </p>
     <form class="form" id="form">
+
+
         <div class="form-group form-unit">
             <div class="input-group">
                 <div class="input-group-addon">用户名</div>
@@ -40,6 +43,7 @@
             </button>
         </div>
     </form>
+
     <script src="js/effects/jquery-2.2.3.js"></script>
     <script src="js/effects/bootstrap.js"></script>
     <script src="js/layer/layer.js"></script>
